Fixed badge label align on chromium browsers

--- a/src/components/Badge/Badge.css
+++ b/src/components/Badge/Badge.css
@@ -21,6 +21,7 @@
     position: absolute;
     font-weight: bold;
     text-align: center;
+    left: 0;
     top: 80%;
     opacity: 0;
     transition: 0.2s;
